# pfs_upk

./: .gitignore  CMakeLists.txt  MemoryStream.cpp  MemoryStream.h  README.md  csharp_types.h  encoding.cpp  pack.cpp  pfs_upk.cpp  pfs_upk.hpp  sha1.c  unpack.cpp  xorcrypt.cpp
test/ascii/: i_am_a_ascii.txt
test/unicode/: (-■_■).txt  (╯°□°）╯︵ ┻━┻.txt
